Update UI and fix assets paths

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-[#F3ACB2] rounded-t-[60px] mt-24 grid grid-cols-5 justify-between px-20 pt-16 text-[#333]">
+<footer class="bg-[#F3ACB2] rounded-t-[60px] mt-24 grid grid-cols-5 justify-between px-20 pt-16 text-[#333]" id="contact">
   <div>
     <img src="assets/16e3f15e3b1e69832a4bb250a0ac0451c136349f.png" class="w-[140px] mb-4">
     <p>©2019 SworkitⓇ by Nexercise, Inc.</p>
