--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -6,8 +6,8 @@
   <nav class="bg-white shadow-md rounded-[15px] h-[58px] flex items-center px-10">
     <ul class="flex gap-10 font-semibold text-[#1b1616]">
       <li><a href="#hero" class="hover:text-pink-950">Home</a></li>
-      <li><a href="#menu-wrapper" class="hover:text-pink-950">Shop</a></li>
-      <li><a href="#" class="hover:text-pink-950">Rewards</a></li>
+      <li><a href="#menu" class="hover:text-pink-950">Shop</a></li>
+      <li><a href="#rewards" class="hover:text-pink-950">Rewards</a></li>
       <li><a href="#about-us" class="hover:text-pink-950">About</a></li>
       <li><a href="#contact" class="hover:text-pink-950">Contact</a></li>
     </ul>
