--- a/src/app/components/menu-carousel/menu-carousel.html
+++ b/src/app/components/menu-carousel/menu-carousel.html
@@ -1,4 +1,4 @@
-<div class="relative flex justify-center items-center py-32">
+<div class="relative flex justify-center items-center py-32" id="menu">
   <button class="absolute left-20 text-4xl w-24 h-24 bg-[#F3ACB2]  rounded-full flex items-center justify-center hover:scale-110 transition-transform"><i class='bx bx-chevron-left'></i></button>
 
   <div class="flex gap-8 p-16 bg-[url('assets/Rectangle_3.png')] bg-cover rounded-3xl scale-80">
