--- a/src/app/components/order-section/order-section.html
+++ b/src/app/components/order-section/order-section.html
@@ -1,4 +1,4 @@
-<section class="py-36">
+<section class="py-36" id="rewards">
   <div class="max-w-[1200px] mx-auto flex gap-24 px-16 items-center">
     <div class="w-1/2">
       <img src="assets/4e2df7441d52280b7e65998ff7b4bf77056d9412.png" class="w-[450px] mt-36">
